# xloc

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  counter.rs  main.rs  parser.rs
src/lib/: app.rs  counter.rs  lib.rs  threads.rs
tests/: app.rs  cli.rs
tests/data/: data.py  data.rs  data.txt
