[package]
name = "xloc"
description = "A fast, multi-threaded line counting utility written in Rust."
version = "0.2.0"
authors = ["Ethan Henderson", "Jonxslays"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Jonxslays/xloc"
repository = "https://github.com/Jonxslays/xloc"
documentation = "https://docs.rs/xloc"
keywords = ["xloc", "lines", "count", "code"]
categories = ["command-line-utilities", "concurrency", "filesystem"]
license = "BSD-3-Clause"
include = ["src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "xloc"
path = "src/lib/lib.rs"

[dependencies]
clap = "2.33.3"
regex = "1.5.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"
